# machine-learning-pucpr

./: AULA_3_T_Fold_CrossValidation_GridSearch_DT_v2.ipynb
TDE2/: .gitignore  pyproject.toml
TDE2/figures/: classifier_accuracy_comparison.html
TDE2/mlruns/0/: meta.yaml
TDE2/mlruns/0/01459364fad94e4cb7d09001297f00e5/: meta.yaml
TDE2/mlruns/0/0178294586d3472f998989a8910355b8/: meta.yaml
TDE2/mlruns/0/02630007a8a24ef29a0686d00c5efa0c/: meta.yaml
TDE2/mlruns/0/02a072efc8ec44869b215f10a8d00df9/: meta.yaml
TDE2/mlruns/0/02ad40a32e1c4637b4350c8ed5d221ea/: meta.yaml
TDE2/mlruns/0/03177d0ea7524cada06df9934891f6ff/: meta.yaml
TDE2/mlruns/0/03ffdccb55db44edadcb117f52b2f1cc/: meta.yaml
TDE2/mlruns/0/043c6c4eb44a4807bb5ad2375dde4eb3/: meta.yaml
TDE2/mlruns/0/049bc771af20461da249e37989a2394e/: meta.yaml
TDE2/mlruns/0/05fc45c7b489402aa4c9e1e3575a0800/: meta.yaml
TDE2/mlruns/0/06041323d458484ba66b14d86cb8e48e/: meta.yaml
TDE2/mlruns/0/07435d6ae9f14a77858abb07e401fb39/: meta.yaml
TDE2/mlruns/0/084933af8d1b47dfa45fcf181ea49422/: meta.yaml
TDE2/mlruns/0/095c1954823b4dcbb58f072017fe035b/: meta.yaml
TDE2/mlruns/106006165197235465/: meta.yaml
TDE2/mlruns/547329983218013833/: meta.yaml
TDE2/mlruns/687281919428858806/: meta.yaml
TDE2/notebooks/: FeatureExtraction_2025.ipynb  Script_Exemplo_TDE2.ipynb
TDE2/reports/: report.typ
TDE2/results/: misclassified_samples.csv
TDE2/src/: main.py
TDE2/src/utils/: config.py  feature_extraction.py
ex_02_09/: .gitignore  Script_VC_HO.ipynb  Script_VC_HO_Regressor.ipynb  pyproject.toml
(+4512 files in other folders)
