[project]
name = "tde2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.1",
]

[project.optional-dependencies]
plot = [
    "altair>=5.5.0",
    "matplotlib>=3.10.7",
]
feature-extraction = [
    "imutils>=0.5.4",
    "keras>=3.12.0",
    "opencv-python-headless>=4.11.0.86",
    "scikit-image>=0.25.2",
    "tensorflow>=2.20.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "tqdm>=4.67.1",
]
